src/objects/Harvest_Project__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Harvest Projects</relationshipLabel>
        <relationshipName>Harvest_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_by__c</fullName>
        <label>Bill by</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>People</fullName>
                </value>
                <value>
                    <fullName>Tasks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_by__c</fullName>
        <label>Budget by</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No budget</fullName>
                </value>
                <value>
                    <fullName>Total project hours</fullName>
                </value>
                <value>
                    <fullName>Total project fees</fullName>
                </value>
                <value>
                    <fullName>Hours per task</fullName>
                </value>
                <value>
                    <fullName>Hours per person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_to_all__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget visible to all</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CostBudgetIncludesExpenses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cost Budget Includes Expenses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Budget__c</fullName>
        <label>Cost Budget</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_at__c</fullName>
        <label>Harvest Record created at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ends_on__c</fullName>
        <label>Ends on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimate__c</fullName>
        <label>Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimate_by__c</fullName>
        <label>Estimate by</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Harvest_ID__c</fullName>
        <externalId>true</externalId>
        <label>Harvest ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hint_Earliest_Record_At__c</fullName>
        <label>Earliest Record At</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hint_Latest_Record_at__c</fullName>
        <label>Latest Record at</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HourlyRate__c</fullName>
        <label>Hourly Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notify_when_over_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify when over Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Harvest Projects</relationshipLabel>
        <relationshipName>Harvest_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Over_Budget_Notified_at__c</fullName>
        <label>Over budget notified at</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Over_Budget_Percentage__c</fullName>
        <label>Over Budget from %&quot;</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <externalId>true</externalId>
        <label>Project Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_at__c</fullName>
        <label>Harvest Record updated at</label>
        <type>DateTime</type>
    </fields>
    <label>Harvest Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Budget_by__c</columns>
        <columns>Budget__c</columns>
        <columns>Bill_by__c</columns>
        <columns>Project_Code__c</columns>
        <columns>Notes__c</columns>
        <columns>Billable__c</columns>
        <columns>Active__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Cost_Budget__c</columns>
        <columns>Updated_at__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Harvest Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Harvest Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>